--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -111,3 +111,29 @@ input[type=submit] {
      padding: 10px 24px;
      margin-right: 10px;
 }
+
+/*admin menus*/
+
+ul.menu {
+     list-style: none;
+     margin: 0;
+     padding: 0;
+     overflow: hidden;
+     background: #16A085;
+}
+
+ul.menu li {
+     float: left;
+     border-right: 1px solid #1ABC9C;
+}
+
+ul.menu a {
+     display: block;
+     padding: 10px 20px;
+     text-decoration: none;
+     color: #fff;
+}
+
+ul.menu a:hover {
+     background: #1ABC9C;
+}
